welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: '(' expected but '{' found.
  else if {
          ^SlugTracking:12: error: '(' expected but '{' found.
  else if { (estFaceMur()==true) }
          ^SlugTracking:13: error: illegal start of simple expression
} 
^