welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if (getCouleurSol()==Color.green) {
    recule()
    avance()
  } 
  else if {
    recule()
    gauche()
  }
  return true
  else if { (estFaceMur()==true) }
}